# python-project-lvl1

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
brain_games/: cli.py  even_or_odd.py
brain_games/scripts/: brain_even.py  brain_games.py
