[tool.poetry]
name = "GURTATI_brain_games"
version = "0.1.0"
description = ""
authors = ["GurTati <z.atlantida.z@gmail.com>"]
packages = [
    { include = "brain_games" },
  ]

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/legacy/"