[tool.poetry]
name = "GURTATI_brain_games"
version = "0.1.5"
description = ""
authors = ["GurTati <z.atlantida.z@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.4.4"
yapf = "^0.29.0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"


[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/legacy/"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
